# rusty_dns

./: .env  .gitignore  Cargo.toml  Configuration.toml  README.md
migrations/: 20240715083956_init-db.sql
src/: configuration.rs  lib.rs  main.rs  telemetry.rs  workers.rs
src/structs/: auxiliaries.rs  buffer.rs  db_queries.rs  header.rs  mod.rs  packet.rs  questions_and_records.rs
src/workers/: helpers.rs
tests/api/: helpers.rs  main.rs  tests_that_fail.rs  tests_that_succeede.rs
