[package]
name = "rusty_dns"
version = "0.1.0"
authors = ["hjrgrn <187955624+hjrgrn@users.noreply.github.com>"]
edition = "2021"
default-run = "rusty_dns"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dns"
path = "./src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
config = "0.14.0"
serde = { version = "1.0.203", features = ["derive"] }
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
uuid = { version = "1.10.0", features = ["v4"] }

[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "sqlite",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
once_cell = "1.19.0"
tokio-util = { version = "0.7.11", features = ["full"] }
